--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "pre:deploy": "npm run build",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
@@ -46,6 +48,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.6.2"
   }
 }
